--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "ts-advanced-types",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Advanced types and utility functions for TypeScript.",
   "main": "index.ts",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ggondim/ts-advanced-types.git"
   },
-  "keywords": ["typescript", "types", "typings", "typescript-xor"],
+  "keywords": [
+    "typescript",
+    "types",
+    "typings",
+    "typescript-xor"
+  ],
   "author": {
     "email": "gustavospgondim@gmail.com",
     "name": "Gustavo Gondim",
