--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ts-advanced-types",
   "version": "1.1.2",
   "description": "Advanced types and utility functions for TypeScript.",
-  "main": "index.ts",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"files": ["dist", "README.md"],
   "scripts": {},
   "repository": {
     "type": "git",
