--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ts-advanced-types",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Advanced types and utility functions for TypeScript.",
-	"main": "dist/index.js",
-	"types": "dist/index.d.ts",
-	"files": ["dist", "README.md"],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {},
   "repository": {
     "type": "git",
